--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,29 @@
 .card {
   padding: 2em;
 }
+.edit{
+  background-color: #fff;
+}
 
 .read-the-docs {
   color: #888;
+}
+.dialog{
+  display: block;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: rgb(0, 0, 0);
+  opacity: 0.5;
+  z-index: 100002;
+  width: 100%;
+  height: 100%;
+}
+.content{
+  display: block;
+  position: fixed;
+  top: 50%;
+  right: 50%;
+  background-color: #fff;
+  z-index: 100003;
 }
